--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "memorize-me",
   "version": "1.0.0",
   "description": "A web app to display photos from NAS in slideshow manner",
-  "main": "backend/src/index.js",
-  "scripts": {
+  "main": "backend/src/index.js",  "scripts": {
     "start": "node backend/src/index.js",
     "dev": "nodemon backend/src/index.js",
     "init-db": "node backend/src/init-db.js",
     "fetch-photos": "node backend/src/fetch-photos.js",
+    "test-config": "node test-config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,15 +19,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "node-schedule": "^2.1.1",
-    "dotenv": "^16.3.1",
+    "@marsaud/smb2": "^0.18.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "glob": "^11.0.2",
+    "node-schedule": "^2.1.1",
+    "samba-client": "^7.2.0",
     "sharp": "^0.32.5",
-    "fs-extra": "^11.1.1"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.0.1"
   }
 }
