--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon backend/src/index.js",
     "init-db": "node backend/src/init-db.js",
     "fetch-photos": "node backend/src/fetch-photos.js",
+    "flush-data": "node backend/src/flush-data.js",
     "test-config": "node test-config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
