--- a/compose.yml
+++ b/compose.yml
@@ -9,6 +9,12 @@ services:
     restart: unless-stopped
     ports:
       - "3005:3000"
+    privileged: true
+    cap_add:
+      - SYS_ADMIN
+      - DAC_READ_SEARCH
+    security_opt:
+      - apparmor:unconfined
     volumes:
       # Store photos and database on the host machine
       - ./backend/data:/app/backend/data
@@ -19,7 +25,7 @@ services:
       - NODE_ENV=production
       - PORT=3000
       - HOST=0.0.0.0
-    # Use specific memory limits for Raspberry Pi 3
+    # Use appropriate memory limits
     deploy:
       resources:
         limits:
