--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ yarn-debug.log
 yarn-error.log
 package-lock.json
 
-# Environment variables
+# Environment variables and configuration
 .env
+config.json
 
 # Data
 backend/data/*.db
