Add photos reload

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ MOUNTED_PHOTOS_PATH=/app/mnt
 FETCH_PHOTOS_SCHEDULE="0 0 * * *"
 
 # Number of photos to fetch at once
-PHOTOS_PER_DAY=10
+PHOTOS_PER_DAY=25
 
 # Slideshow settings
-SLIDESHOW_INTERVAL=300000  # 5 minutes in milliseconds
+SLIDESHOW_INTERVAL=60000  # 1 minute in milliseconds
