--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "memorize-me",
   "version": "1.0.0",
   "description": "A web app to display photos from NAS in slideshow manner",
-  "main": "backend/src/index.js",  "scripts": {
+  "main": "backend/src/index.js",
+  "scripts": {
     "start": "node backend/src/index.js",
     "dev": "nodemon backend/src/index.js",
     "init-db": "node backend/src/init-db.js",
@@ -21,14 +22,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
+    "fs-extra": "^11.3.2",
     "node-schedule": "^2.1.1",
-    "sharp": "^0.32.5",
+    "sharp": "^0.34.5",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.11"
   }
 }
