--- a/compose.yml
+++ b/compose.yml
@@ -13,11 +13,9 @@ services:
     security_opt:
       - apparmor:unconfined
     volumes:
-      # Mount the entire application directory for live code updates
-      - .:/app
-      # Override data directory to persist on host
+      # Store photos and database on the host machine
       - ./backend/data:/app/backend/data
-      # Mount your .env file for configuration  
+      # Mount your .env file for configuration
       - ./.env:/app/.env
     environment:
       # Override environment variables as needed
